--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^5.0.0",
+    "jest-cucumber": "^3.0.1",
     "prettier": "^2.8.8"
   },
   "jest": {
