--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "auth-server",
   "version": "1.0.0",
-  "description": "",
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "googleapis": "^59.0.0"
-  }
+  },
+  "description": ""
 }
